--- a/MP2_DSR.Rmd
+++ b/MP2_DSR.Rmd
@@ -11,10 +11,51 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 library(tidyverse)
+library(dplyr)
 ```
 
 ```{r}
 approval <- read_csv("data/presapproval.csv")
+```
+
+```{r}
+load("house_elections.rda")
+load("candidates.rda")
+load("committees.rda")
+load("contributions.rda")
+```
+
+```{r}
+#meging candidates and contributions
+cand_contrib_merge <- full_join(candidates, contributions, by = "cand_id")
+```
+
+```{r}
+house_elections_1 <- house_elections %>%
+  rename(cand_id = fec_id)
+```
+
+```{r}
+#merging (cand_contrib_merge) with house_elections
+cand_contrib_house_merge <- full_join(cand_contrib_merge, house_elections_1, by="cand_id")
+```
+
+```{r}
+main_filter <- cand_contrib_house_merge %>% 
+  filter(cand_election_yr == 2012) %>% 
+  filter(cand_office == "H")
+```
+
+```{r}
+main_filter_select <- main_filter %>% 
+  select(general_votes, cand_office_state, cand_party_affiliation, primary_votes, transaction_amt)
+```
+
+
+```{r}
+main_filter_select_grouped <- main_filter_select %>% 
+  group_by(cand_office_state, cand_party_affiliation) %>% 
+  summarise_all(funs(sum), na.rm=TRUE)
 ```
 
 
