--- a/SDS192_MP2.Rmd
+++ b/SDS192_MP2.Rmd
@@ -9,6 +9,10 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r eval=FALSE}
+devtools::install_github("benmarwick/wordcountaddin", type = "source", dependencies = TRUE)
+```
+
 ```{r echo=FALSE, message=FALSE}
 library(tidyverse)
 library(dplyr)
@@ -111,7 +115,6 @@ ggplot(main_filter_select_grouped_DR, aes(x = transaction_amt, y = general_votes
   ggtitle("The Impact of Campaign Contributions on Voting Outcomes in 2012") + 
   labs(colour="Political Party")
 ```
-
 
 
 ```{r}
